infra/k8s/celery/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flower-service
  labels:
    app: flower
    part-of: bodam
spec:
  type: ClusterIP
  selector:
    app: flower
  ports:
    - name: http
      port: 5555
      targetPort: 5555
