infra/k8s/celery/flower-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flower-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8"
spec:
  rules:
    - host: bodam.example.com
      http:
        paths:
          - path: /flower
            pathType: Prefix
            backend:
              service:
                name: flower-service
                port:
                  number: 5555
